--- a/about.html
+++ b/about.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="../Images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../Images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="../Images/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./Images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./Images/favicon_io/site.webmanifest">
     <title>Vitamix</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
   <div class="bg-img">
     <header>
       <div id="topNav" class="responsive top-bar">
         <section class="logo-bar">
-          <a class="logo" href="../docs/index.html" lang="no" translate="no">VitamiX</a>
+          <a class="logo" href="./index.html" lang="no" translate="no">VitamiX</a>
           <a href="javascript:void(0);" onclick="hamButton()"><i id="hamButton" class="fa fa-bars"></i></a>
         </section>
         <nav class="top-nav">
@@ -29,7 +29,7 @@
         <article class="jumbotron">
           <h1 lang="en" translate="no">Bossman Juice</h1>
           <p>Tis is a marketing blog. <br>
-            Check out the <a href="../docs/index.html#firstchild-main">Hot Topic</a> below for the newest update or get more details in the <em>Category</em></a><br>
+            Check out the <a href="./index.html#firstchild-main">Hot Topic</a> below for the newest update or get more details in the <em>Category</em></a><br>
             Also you can find your nearest Warung Juice or Dadakans Juice Booth for buying our beloved healthy chemistry <a href=""><strong>>Here<</strong></a></p>
         </article>
       </section>
@@ -40,7 +40,7 @@
           <h2>About</h2>
           <section class="about-page card">
             <h3>Vitamix</h3>
-            <img src="../Images/vitamix-logo.png" alt="Vitamix Logo" class="abt-img">
+            <img src="./Images/vitamix-logo.png" alt="Vitamix Logo" class="abt-img">
             <p>Drink Juice and keep healthy!<br>
               <br>
               Vitamix is a community-based  company, is a franchese-like business for gaining Indonesia's UKM survivor. So if you are anak SMA or Pemuda Karang Taruna or whoever you are as long as you are warganegara NKRI, you can join us for free. You can jualan juice in your beloved home using our Trademark and we takes care the promotion, advertisment and marketing management for free. <br>
@@ -75,6 +75,6 @@
     </main>
   <footer><p>This blog is created by Heri Rudini and supported by Salt Academy</p></footer>
   </div>
-  <script type="text/javascript" src="../Javascript/nav-button.js"></script>
+  <script type="text/javascript" src="./Javascript/nav-button.js"></script>
   </body>
 </html>
