--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </section>
         </aside>
       </main>
-    <footer><p>This blog is created by Heri Rudini and supported by Salt Academy</p></footer>
+    <footer><p>This blog is developed by Administrator</p></footer>
     </div>
     <script type="text/javascript" src="./Javascript/pop-up.js"></script>
     <script type="text/javascript" src="./Javascript/catalog.js"></script>
