--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
           </article>
         </div>
       </main>
-      <footer><p>This blog is created by Heri Rudini and supported by Salt Academy</p></footer>
+      <footer><p>This blog is developed by Administrator</p></footer>
   </div>
   <script type="text/javascript" src="./Javascript/catalog.js"></script>
   <script type="text/javascript" src="./Javascript/nav-button.js"></script>
