--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         </article>
       </div>
     </main>
-  <footer><p>This blog is created by Heri Rudini and supported by Salt Academy</p></footer>
+  <footer><p>This blog is developed by Administrator</p></footer>
   </div>
   <script type="text/javascript" src="./Javascript/nav-button.js"></script>
   </body>
