--- a/post-mango.html
+++ b/post-mango.html
@@ -141,7 +141,7 @@
           </section>
         </aside>
       </main>
-    <footer><p>This blog is created by Heri Rudini and supported by Salt Academy</p></footer>
+    <footer><p>This blog is developed by Administrator</p></footer>
     </div>
       <script type="text/javascript" src="./Javascript/form-comment.js"></script>
       <script type="text/javascript" src="./Javascript/nav-button.js"></script>
