--- a/about.html
+++ b/about.html
@@ -58,16 +58,16 @@
               <div class="clear"></div>
               <section>
               <h3>Administrator</h3>
-                <img src="https://lh3.googleusercontent.com/lTXECePcvnuwNVQKzONihzhVbK9TO27XstruvUSam5sy1qZnQ-SzGGsmd_gFoJIYvDu35imrcXHsd0mZnxs6FJ9C2hgVvO89CcFoEpb4OH9Gfnj2IsR9R7U_yYhEALhZPi2jVAuF6w=w1920-h1080" alt="Admin Face" class="abt-img">
-                <p>Name: <strong>Heri Rudini</strong></p>
+                <img src="" alt="Admin" class="abt-img">
+                <p>Name: <strong>Heri R</strong></p>
                 <p>Alumnni of Russian Language and Literature of Padjadjaran University (Unpad)<br>
                 As a science of culture-educated person, i also have a high interest in computer and tech stuff. I've joined many comunity to satisfy my curiousity of technology, and this blog is created during my participation in Programing Bootcamp held by Salt Academy (Salt Indonesia) as my first period Assignment. If you want to know more about me, go ahead and check out my social-media linked below</p>
-                <a href="https://facebook.com/Heri.Rudini" class="fa fa-facebook"></a>
-    						<a href="https://linkedin.com/in/heri-rudini-8996981b3" class="fa fa-linkedin"></a>
-    						<a href="https://yukitamikir.blogspot.com" class="fa fa-google"></a>
-                <a href="https://www.instagram.com/heri.rudini/"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.twitter.com/herirudini/"><i class="fa fa-twitter"></i></a>
-                <a href="https://github.com/herirudini"><i class="fa fa-github"></i></a>
+                <a href="https://facebook.com/" class="fa fa-facebook"></a>
+    						<a href="https://linkedin.com/" class="fa fa-linkedin"></a>
+    						<a href="https://blogger.com" class="fa fa-google"></a>
+                <a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com"><i class="fa fa-github"></i></a>
               </section>
           </section>
         </article>
